VERSION: 0.1.0

Release notes 0.1.0
- README update.
- Insert next/previous ID check into the photo show views.
- Introduction of tags into domain objects from photo result sets.
- Introduction of tag listing into list views.
- PicasaService updates to support tag queries and searches.
- Initial support for the tag controller.

Release notes 0.0.3
- README update.
- Introduction of new connect() method allowing the Picasa web service connection to be reset during runtime.
- Introduction of new reset() method allowing the Picasa web service to revert back to the default Config.groovy connection details during runtime.

Release notes 0.0.2
- Introduction of further documentation (README / CHANGES)
- Internationalised the Photo and Album views
- Small tweak to the Picasa Service and Album / Photo controllers

Initial release: 0.0.1
