@@ -4,6 +4,8 @@ uk.co.anthonycampbell.grails.plugins.picasa.Album.legend=Photo Albums
 uk.co.anthonycampbell.grails.plugins.picasa.Album.details.legend=Album Details
 uk.co.anthonycampbell.grails.plugins.picasa.Photo.legend=Photo Listing
 uk.co.anthonycampbell.grails.plugins.picasa.Photo.details.legend=Photo Details
+uk.co.anthonycampbell.grails.plugins.picasa.Tag.legend=Tag Listing
+uk.co.anthonycampbell.grails.plugins.picasa.Tag.details.legend=Tag: {0}
 
 # Generic album error messages
 uk.co.anthonycampbell.grails.plugins.picasa.Album.list.not.available=The photo album listing is currently not available. Please try again later.
@@ -13,11 +15,16 @@ uk.co.anthonycampbell.grails.plugins.picasa.Album.not.found=The photo album you'
 uk.co.anthonycampbell.grails.plugins.picasa.Photo.list.not.available=The photo listing is currently not available. Please try again later.
 uk.co.anthonycampbell.grails.plugins.picasa.Photo.not.found=The photo you've selected could not be found. Please ensure the ID is correct and try again.
 
+# Generic tag error messages
+uk.co.anthonycampbell.grails.plugins.picasa.Tag.list.not.available=The tag listing is currently not available. Please try again later.
+uk.co.anthonycampbell.grails.plugins.picasa.Tag.not.found=The tag you've selected could not be found. Please ensure the tag keyword is correct and try again.
+
 # Pagination text
 default.paginate.prev=&laquo; Previous
 default.paginate.next=Next &raquo;
 
 # Album specific
+uk.co.anthonycampbell.grails.plugins.picasa.Album.label=Album
 uk.co.anthonycampbell.grails.plugins.picasa.Album.albumId.label=Album ID
 uk.co.anthonycampbell.grails.plugins.picasa.Album.albumId.blank=Album ID must not be blank!
 uk.co.anthonycampbell.grails.plugins.picasa.Album.name.label=Name
@@ -42,6 +49,7 @@ uk.co.anthonycampbell.grails.plugins.picasa.Album.dateCreated.label=Date Created
 uk.co.anthonycampbell.grails.plugins.picasa.Album.tags.label=Tags
 
 # Photo specific
+uk.co.anthonycampbell.grails.plugins.picasa.Photo.label=Photo
 uk.co.anthonycampbell.grails.plugins.picasa.Photo.photoId.label=Photo ID
 uk.co.anthonycampbell.grails.plugins.picasa.Photo.photoId.blank=Photo ID must not be blank!
 uk.co.anthonycampbell.grails.plugins.picasa.Photo.albumId.label=Album ID
@@ -69,3 +77,10 @@ uk.co.anthonycampbell.grails.plugins.picasa.Photo.nextPhotoId.label=Next Photo I
 uk.co.anthonycampbell.grails.plugins.picasa.Photo.isPublic.label=Is Public
 uk.co.anthonycampbell.grails.plugins.picasa.Photo.dateCreated.label=Date Created
 uk.co.anthonycampbell.grails.plugins.picasa.Photo.tags.label=Tags
+
+# Tag specific
+uk.co.anthonycampbell.grails.plugins.picasa.Tag.label=Tag
+uk.co.anthonycampbell.grails.plugins.picasa.Tag.keyword.label=Keyword
+uk.co.anthonycampbell.grails.plugins.picasa.Tag.keyword.blank=Tag keyword must not be blank!
+uk.co.anthonycampbell.grails.plugins.picasa.Tag.keyword.size.toosmall=The tag keyword is too short!
+uk.co.anthonycampbell.grails.plugins.picasa.Tag.keyword.size.toobig=The tag keyword is too long!
