@@ -1,5 +1,8 @@
 VERSION: 0.1.0
 
+Known issues:
+- Sort links need updating to support ajax requests fully.
+
 Release notes 0.1.0
 - README update.
 - Insert next/previous ID check into the photo show views.
@@ -7,6 +10,8 @@ Release notes 0.1.0
 - Introduction of tag listing into list views.
 - PicasaService updates to support tag queries and searches.
 - Initial support for the tag controller.
+- Introduction of new configuration properties.
+- Initial support for the tag listing and show views.
 
 Release notes 0.0.3
 - README update.
